# C

./: .clang-format  .gitignore  000help.txt
000TEST/src/: test001.c  test002.c  test003.c  test004.c  test005.c  test006.c  test007.c  test008.c  test009.c  test010.c  test011.c  test012.c  test013.c  test014.c  test015.c  test016.c  test017.c  test018.c  test019.c  test020.c  test021.c  test022.c  test023.c  test024.c  test025.c  test026.c  test027.c  test028.c  test029.c  test030.c  test031.c  test032.c  test033.c  test034.c  test035.c  test036.c  test037.c  test038.c  test039.c  test040.c  (+3 more)
BubbleSort/: CMakeLists.txt
BubbleSort/inc/: bubble.h
BubbleSort/src/: bubble.c  main.c
CProjectTemplate/: CMakeLists.txt  main.c
CProjectTemplate/inc/: 000help.txt  test.h
CProjectTemplate/src/: test.c
DynamicFileContact/: CMakeLists.txt  main.c
DynamicFileContact/inc/: 000help.txt  contact.h
DynamicFileContact/lib/: CMakeLists.txt
DynamicFileContact/src/: CMakeLists.txt  contact.c
FindMine/: CMakeLists.txt
FindMine/inc/: game.h
FindMine/src/: game.c  test.c
contact/: CMakeLists.txt  contact.c  contact.h  list.c  main.c
contact/inc/: contact.h
contact/lib/: CMakeLists.txt
contact/src/: contact.c
libString/: CMakeLists.txt
libString/inc/: str.h
libString/lib/: CMakeLists.txt  libString.lib
list/: CMakeLists.txt  list.c  list.h  main.c
list-generic/: CMakeLists.txt  list.c  list.h  main.c
list/inc/: list.h
minesweeper/: main.c
slist/: main.c
slist-generic/: main.c
sort/: main.c  sort.c  sort.h
string/: CMakeLists.txt  main.c
(+36 files in other folders)
